--- a/style.css
+++ b/style.css
@@ -18,14 +18,17 @@ body{
     background-color: hsl(47, 88%, 63%);
 }
 .main{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);    
 }
 .container{
     margin-top: 70px;
     background-color: white;
-    width: 355px;
+    width: 300px;
     height: auto;
     border-radius: 20px;
     border: 2px solid;
@@ -55,7 +58,7 @@ button{
     font-weight: 800;
     font-size: x-large;
 }
-.heading:hover{
+.heading:active{
     color: hsl(47, 88%, 63%);
     cursor: pointer;
 }
@@ -73,4 +76,14 @@ button{
 .avatar{
     width: 35px;
     margin-right: 15px;
+}
+@media screen and (width < 375px) {
+    .container{
+        display: flex;
+        width: 90vw;
+        margin-right: 10px;
+    } 
+    .main{
+        display: flex;
+    }
 }
